Added image search functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -175,7 +175,7 @@
     <nav>
     <a href="#">+You</a>
     <a href="#">Gmail</a>
-    <a href="#">Images</a>
+    <a href="imageSearch">Images</a>
     <!--
     <img src="https://dl.dropboxusercontent.com/u/25441638/1.5-google-clone/images/grid.png" />
     -->
