--- a/templates/search.html
+++ b/templates/search.html
@@ -161,21 +161,20 @@
     /* End of Footer */
     
     @media screen and (max-width: 510px) {
-    .top-toolbar nav a:nth-child(2), a:nth-child(3), footer {
-    display:none;
-    }
+        .top-toolbar nav a:nth-child(2), a:nth-child(3), footer {
+        display:none;
+        }
     
-    .logo {
-    max-width: 40%;
+        .logo {
+        max-width: 40%;
+        }
     }
-    }
-    </style>
-    
+</style>
     <div class="top-toolbar">
     <nav>
     <a href="#">+You</a>
     <a href="#">Gmail</a>
-    <a href="#">Images</a>
+    <a href="imageSearch">Images</a>
     <img src="https://dl.dropboxusercontent.com/u/25441638/1.5-google-clone/images/grid.png" />
     <a href="#"><button class="signin">Sign In</button></a>
     </nav>
