Proper coupling of search and imageSearch functionalities

--- a/templates/search.html
+++ b/templates/search.html
@@ -178,6 +178,7 @@
     <img src="https://dl.dropboxusercontent.com/u/25441638/1.5-google-clone/images/grid.png" />
     <a href="#"><button class="signin">Sign In</button></a>
     -->
+    <a href="search">Search</a>
     <a href="imageSearch">Images</a>
     </nav>
     </div>
