--- a/templates/imageSearch.html
+++ b/templates/imageSearch.html
@@ -176,6 +176,7 @@ color: #000000;
     <a href="#">+You</a>
     <a href="#">Gmail</a>
     -->
+    <a href="search">Search</a>
     <a href="imageSearch">Images</a>
     <!--
     <img src="https://dl.dropboxusercontent.com/u/25441638/1.5-google-clone/images/grid.png" />
