--- a/templates/index.html
+++ b/templates/index.html
@@ -177,6 +177,7 @@
     <a href="#">+You</a>
     <a href="#">Gmail</a>
     -->
+    <a href="search">Search</a>
     <a href="imageSearch">Images</a>
     <!--
     <img src="https://dl.dropboxusercontent.com/u/25441638/1.5-google-clone/images/grid.png" />
