--- a/templates/search.html
+++ b/templates/search.html
@@ -205,7 +205,7 @@
     <b style="padding-left: 50px; padding-right: 50px; color: #646464;">Web Results</b>
     {% for result in final_result %}
     <div style="padding-left: 50px; padding-right: 50px;">
-        <h3 style="color: blue;"><a href="{{ result.1 }}">{{ result.0 }}</a></h3>
+        <h3 style="color: blue;"><a href="{{ result.1 }}" target="blank">{{ result.0 }}</a></h3>
         <h3 style="color: green;">{{ result.1 }}</h3>
         <h3>{{ result.2 }}</h3>
     </div><br><br>
