Little bit of fixing for Videos is left

--- a/templates/newsSearch.html
+++ b/templates/newsSearch.html
@@ -180,6 +180,7 @@
     <a href="search">Search</a>
     <a href="imageSearch">Images</a>
     <a href="newsSearch">News</a>
+    <a href="videoSearch">Videos</a>
     <!--
     <img src="https://dl.dropboxusercontent.com/u/25441638/1.5-google-clone/images/grid.png" />
     <img src="https://upload.wikimedia.org/wikipedia/en/thumb/8/88/DuckDuckGo_logo.svg/1200px-DuckDuckGo_logo.svg.png" />
