Slight modifications to videoSearch and added footer links

--- a/templates/index.html
+++ b/templates/index.html
@@ -180,6 +180,7 @@
     <a href="search">Search</a>
     <a href="imageSearch">Images</a>
     <a href="newsSearch">News</a>
+    <a href="videoSearch">Videos</a>
     <!--
     <img src="https://dl.dropboxusercontent.com/u/25441638/1.5-google-clone/images/grid.png" />
     <img src="https://upload.wikimedia.org/wikipedia/en/thumb/8/88/DuckDuckGo_logo.svg/1200px-DuckDuckGo_logo.svg.png" />
@@ -204,18 +205,18 @@
     </div>
     </div>
     </div>
-    <!--
+
     <div class="footer">
     <footer class="bottom-toolbar">
     <nav class="footer-left">
-    <a href="#">Advertising</a>
-    <a href="#">Business</a>
-    <a href="#">About</a>
+    <a href="https://www.linkedin.com/">LinkedIn</a>
+    <a href="https://github.com/">Github</a>
+    <a href="https://www.instagram.com/">Instagram</a>
+    <a href="https://twitter.com/">Twitter</a>
+    <a href="https://www.reddit.com/">Reddit</a>
     </nav>
     <nav class="footer-right">
-    <a href="#">New Privacy &amp; Terms</a>
-    <a href="#">Settings</a>
+    <a href="https://github.com/JimHalpert26/T5_Retrieval_Engine">Source Code</a>
     </nav>
     </footer>
     </div>
-    -->
