Added footer to search page

--- a/templates/search.html
+++ b/templates/search.html
@@ -213,19 +213,18 @@
     {% endfor %}
     {% endif %}
 
-    <!--
     <div class="footer">
-    <footer class="bottom-toolbar">
-    <nav class="footer-left">
-    <a href="#">Advertising</a>
-    <a href="#">Business</a>
-    <a href="#">About</a>
-    </nav>
-    <nav class="footer-right">
-    <a href="#">New Privacy &amp; Terms</a>
-    <a href="#">Settings</a>
-    </nav>
-    </footer>
-    </div>
-    -->
+        <footer class="bottom-toolbar">
+        <nav class="footer-left">
+        <a href="https://www.linkedin.com/">LinkedIn</a>
+        <a href="https://github.com/">Github</a>
+        <a href="https://www.instagram.com/">Instagram</a>
+        <a href="https://twitter.com/">Twitter</a>
+        <a href="https://www.reddit.com/">Reddit</a>
+        </nav>
+        <nav class="footer-right">
+        <a href="https://github.com/JimHalpert26/T5_Retrieval_Engine">Source Code</a>
+        </nav>
+        </footer>
+        </div>
     
