Fixed input value attr

--- a/templates/imageSearch.html
+++ b/templates/imageSearch.html
@@ -194,7 +194,7 @@ color: #000000;
     <form method="POST" action="imageSearch">
             {% csrf_token %}
     {% if query %}
-        <input class="search-bar" type="text" name="imageSearch" autofocus x-webkit-speech value={{query}} />
+        <input class="search-bar" id="input-field" type="text" name="imageSearch" autofocus x-webkit-speech value="{{ query }}" />
     {% else %}
         <input class="search-bar" type="text" name="imageSearch" autofocus x-webkit-speech />
     {% endif %}
@@ -234,4 +234,10 @@ color: #000000;
         <a href="https://github.com/JimHalpert26/T5_Retrieval_Engine">Source Code</a>
         </nav>
         </footer>
-        </div>
+    </div>
+
+    <script type="text/javascript">
+        let input = document.getElementById("input-field");
+        let length = input.value.length;
+        input.setSelectionRange(length, length);   
+    </script>
