--- a/templates/search.html
+++ b/templates/search.html
@@ -182,6 +182,7 @@
     <a href="imageSearch">Images</a>
     <a href="newsSearch">News</a>
     <a href="newsSearch">Videos</a>
+    <a href="movieSearch">Movies</a>
     </nav>
     </div>
     <div class="search">
@@ -190,7 +191,11 @@
     </div>
     <form method="POST" action="search">
     {% csrf_token %}
-    <input class="search-bar" type="text" name="search" autofocus x-webkit-speech/>
+    {% if query %}
+        <input class="search-bar" id="input-field" type="text" name="search" autofocus x-webkit-speech value={{ query }} />
+    {% else %}
+        <input class="search-bar" type="text" name="search" autofocus x-webkit-speech />
+    {% endif %}
     <div class="search-nav">
     <div class="search-button">
     <a href="#"><button type="submit">T5 Search</button></a>
@@ -216,15 +221,19 @@
     <div class="footer">
         <footer class="bottom-toolbar">
         <nav class="footer-left">
-        <a href="https://www.linkedin.com/">LinkedIn</a>
-        <a href="https://github.com/">Github</a>
-        <a href="https://www.instagram.com/">Instagram</a>
-        <a href="https://twitter.com/">Twitter</a>
-        <a href="https://www.reddit.com/">Reddit</a>
+        <a href="https://www.linkedin.com/" target="blank">LinkedIn</a>
+        <a href="https://github.com/" target="blank">Github</a>
+        <a href="https://www.instagram.com/" target="blank">Instagram</a>
+        <a href="https://twitter.com/" target="blank">Twitter</a>
+        <a href="https://www.reddit.com/" target="blank">Reddit</a>
         </nav>
         <nav class="footer-right">
-        <a href="https://github.com/JimHalpert26/T5_Retrieval_Engine">Source Code</a>
+        <a href="https://github.com/JimHalpert26/T5_Retrieval_Engine" target="blank">Source</a>
         </nav>
         </footer>
         </div>
-    
+        <script type="text/javascript">
+            let input = document.getElementById("input-field");
+            let length = input.value.length;
+            input.setSelectionRange(length, length);   
+        </script>
